# milky-kit

./: .ghlobes.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  biome.json  mise.toml  package.json  pnpm-lock.yaml
.claude-plugin/: marketplace.json  plugin.json
.claude/rules/: ci.md  claude-meta.md  comments.md  config-and-env.md  general.md  glb.md  release-please.md  security.md  testing.md  workflow.md  worktrees.md
.github/: dependabot.yml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml  scaffold-test.yml  security.yml
modules/axum/: module.toml
modules/axum/scaffold/apps/api/: Cargo.toml
modules/axum/scaffold/apps/api/src/: config.rs  main.rs  presentation.rs
modules/axum/scaffold/apps/api/src/presentation/: dto.rs  openapi.rs  routes.rs
modules/ci/: module.toml
modules/core/: module.toml
modules/effect/: module.toml
modules/effect-ai/: module.toml
modules/effect-http/: module.toml
modules/effect-mcp/: module.toml
modules/effect-sql/: module.toml
modules/ghlobes/: module.toml
modules/hono/: module.toml
modules/postgres/: module.toml
modules/queue/: module.toml
modules/react/: module.toml
modules/release-please/: module.toml
modules/rust/: module.toml
modules/seaorm/: module.toml
modules/seaorm/scaffold/apps/db/: Cargo.toml
modules/seaorm/scaffold/apps/db/src/: main.rs
modules/seaorm/scaffold/apps/db/src/migrator/: mod.rs
modules/security/: module.toml
modules/ts-shared/: module.toml
scaffold/: milky-kit.toml
scaffold/.claude/: kit.toml
scripts/: test-scaffold.sh
skills/add-endpoint/: SKILL.md
skills/alignify/: SKILL.md
skills/arch-diagrams/: SKILL.md
skills/check-version/: SKILL.md
skills/database-seaorm/: SKILL.md
skills/database-sqlx/: SKILL.md
src/: config.rs  main.rs  manifest.rs  scaffold.rs  sync.rs  template.rs
(+442 files in other folders)
