[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../../packages/domain" }
application = { path = "../../packages/application" }
infrastructure = { path = "../../packages/infrastructure" }

axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
sea-orm = { version = "1", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
