[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm-migration = { version = "1", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
async-trait = "0.1"
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
